--- a/templates/ingredient_search.html
+++ b/templates/ingredient_search.html
@@ -33,10 +33,7 @@
         <input name="ingredient" placeholder="재료명" required>
         <input name="date" type="date" required>
         <input name="amount" type="number" placeholder="수량" required>
-        <select name="type" required>
-          <option value="소비">소비</option>
-          <option value="구매">구매</option>
-        </select>
+        <input name="type" placeholder="종류" required>
         <div class="modal-btns">
           <button type="submit" id="modalSubmitBtn">저장</button>
           <button type="button" onclick="closeModal()">취소</button>
