--- a/templates/ingredient_search.html
+++ b/templates/ingredient_search.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>식자재 검색</title>
-  <meta name="viewport" content="width=375, initial-scale=1.0">
-  <link rel="stylesheet" href="{{ url_for('static', filename='ingredient_search.css') }}">
+  <meta name="viewport" content="width=393, initial-scale=1.0">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
   <div class="container">
