--- a/templates/ingredient_search.html
+++ b/templates/ingredient_search.html
@@ -18,11 +18,9 @@
     </div>
     <ul class="result-list" id="resultList"></ul>
     <footer class="bottom-nav">
-      <div class="dot"></div>
-      <div class="dot active"></div>
-      <div class="dot"></div>
-      <div class="dot"></div>
-      <div class="dot"></div>
+      <a href="/ingredient-search"><button class="nav-btn active"></button></a>
+      <a href="/ai-menu"><button class="nav-btn"></button></a>
+      <a href="/"><button class="nav-btn"></button></a>
     </footer>
   </div>
   <div id="modal" class="modal" style="display:none">
